--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,19 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mynginx
+  name: kubia
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      run: mynginx
+      run: argo-kubia
   template:
-    metadata:
-      labels:
-        run: mynginx
     spec:
       containers:
-      - image: nginx
-        name: mynginx
+      - image: luksa/kubia
+        name: kubia
         ports:
         - containerPort: 80
