--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,12 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kubia
+  name: kubia-argo
 spec:
   replicas: 3
-  selector:
-    matchLabels:
-      run: argo-kubia
   template:
     spec:
       containers:
