--- a/deploy.yaml
+++ b/deploy.yaml
@@ -11,6 +11,7 @@ spec:
     metadata:
       labels:
         app: kubia-argo
+        run: teokkim
     spec:
       containers:
       - image: luksa/kubia
